--- a/asets/css/layout.css
+++ b/asets/css/layout.css
@@ -88,6 +88,59 @@ header > .sns li:hover i {
 .nav_wrap .nav.show li:last-child i {
   color: #000;
 }
+/* search */
+
+.search_content {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  opacity: 0;
+  background-color: #000;
+  /* transition: 0.5s; */
+}
+.search_content.show {
+  display: block;
+  /* transition: 0.5s; */
+  opacity: 0.8;
+}
+
+.search_content i {
+  position: absolute;
+  top: 16px;
+  right: 34px;
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.input_box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.input_box input {
+  width: 468px;
+  height: 51px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  outline: none;
+}
+.input_box input::placeholder {
+  text-align: center;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 700;
+}
+.input_box p {
+  color: #fff;
+  text-align: center;
+  padding: 24px;
+  font-size: 17px;
+}
 /* footer */
 footer {
   background-color: #28211c;
