--- a/asets/css/magazin.css
+++ b/asets/css/magazin.css
@@ -14,13 +14,39 @@
   /* max-width: calc(100% - 348px - 24px); */
   width: 876px;
   margin-right: 24px;
-  background-color: tomato;
+
   height: 100%;
 }
 .primary .masonry {
   padding: 12px;
+  max-width: 414px;
+  background-color: #fff;
 }
 .primary .post-masonry {
+  /* width: 100%; */
+}
+.masonry .post-img-wrap {
+  margin: 0 auto;
+  max-width: 384px;
+  width: 100%;
+}
+.masonry .post-img-wrap > a {
+}
+.masonry .post-img-wrap > a img {
+  display: block;
+  width: 100%;
+  height: 256px;
+}
+.masonry .categori {
+  text-align: center;
+  margin: 44px 0 24px;
+}
+.masonry .categori > a {
+  color: #db9457;
+  padding: 0 8px 2px;
+  font-size: 13px;
+  letter-spacing: 3px;
+  font-weight: 600;
 }
 
 /* sidebar */
