--- a/asets/css/index.css
+++ b/asets/css/index.css
@@ -243,6 +243,9 @@
   .sc_uns .uns_wrap {
     padding: 0 24px;
   }
+  .sc_uns .uns_wrap li a img {
+    height: 260px;
+  }
 }
 @media screen and (max-width: 768px) {
   .mehr_wrap li {
@@ -263,19 +266,17 @@
   .sc_uns .newsletter_wrap button {
     width: 100%;
   }
-  footer .footer_widget_wrap {
-    flex-direction: column;
-    align-items: center;
+  .sc_video .bg_video_wrap {
+    height: 600px;
   }
-  .footer_widget_wrap aside {
-    text-align: center;
-    margin-bottom: 20px;
+  .sc_video .content_wrap {
+    top: 245px;
   }
-  .footer_info_wrap {
-    flex-direction: column;
-    text-align: center;
-  }
+
   .mehr_wrap li a {
     width: 70%;
+  }
+  .sc_uns .uns_wrap li a img {
+    height: 210px;
   }
 }
