--- a/asets/css/magazin.css
+++ b/asets/css/magazin.css
@@ -120,8 +120,18 @@
   width: 100%;
   height: 100%;
   margin-top: 12px;
+  position: relative;
 }
-.sidebar-wrap {
+.sidebar-wrap.show {
+  position: absolute;
+  /* top: 30px; */
+}
+.sidebar-wrap.showfix {
+  position: fixed;
+  top: 0px;
+  max-width: 348px;
+  transform: translateY(-1955.56px);
+  /* top: 30px; */
 }
 .sidebar-wrap .sidebar-item {
   padding: 24px;
