--- a/asets/css/magazinlaout.css
+++ b/asets/css/magazinlaout.css
@@ -78,6 +78,9 @@ header > .sns li:hover i {
 .nav_wrap .nav li:last-child {
   margin-left: auto;
 }
+.nav_wrap .nav li:last-child i {
+  color: #000;
+}
 .nav_wrap .nav li a {
   font-weight: bold;
   text-transform: uppercase;
@@ -351,7 +354,7 @@ footer .footer_widget_wrap .img_wrap img {
   }
 
   .nav_wrap.show {
-    background-color: #000;
+    background-color: #fff;
   }
   .nav_wrap .nav li {
     width: 96%;
@@ -425,6 +428,15 @@ footer .footer_widget_wrap .img_wrap img {
   }
   .nav_wrap .nav.show {
     display: block;
+  }
+  .nav_wrap.show .logo_wrap .menu-trigger span {
+    background-color: #000;
+  }
+  .nav_wrap .logo_wrap.show .menu-trigger span {
+    background-color: #000;
+  }
+  .nav_wrap.show .logo_wrap .mb {
+    color: #000;
   }
 }
 @media screen and (max-width: 768px) {
