--- a/asets/css/layout.css
+++ b/asets/css/layout.css
@@ -17,7 +17,7 @@ header {
 }
 
 header > .sns {
-  max-width: 1903px;
+  /* max-width: 1903px; */
   margin: 0 auto;
   display: flex;
   justify-content: flex-end;
